--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="img/spag2.jpg" alt="Filipino Spaghetti!">
 
     <ul>
-        <li>Vegetable oil</li>
+        <li>1 cup vegetable oil</li>
         <li>1 yellow onion</li>
         <li>5 cloves of garlic</li>
         <li>Ground pork</li>
